fix: 添加联网搜索开关字段

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="description" content="LibreChat - An open source chat application with support for multiple AI models" />
-    <title>Chat</title>
+    <title>CubeChat</title>
     <link rel="shortcut icon" href="#" />
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/ks.ico" />
     <link rel="apple-touch-icon" href="/assets/apple-touch-icon-180x180.png" />
